# zbot

./: CMakeLists.txt  README.md  log.txt  prj.conf  sysbuild.conf
boards/: native_sim.conf  native_sim.overlay  nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
src/: AGENT.md.in  AGENTS.md.in  agent.c  agent.h  config.c  config.h  json_util.c  json_util.h  llm_client.c  llm_client.h  main.c  memory.c  memory.h  shell_cmd.c  skill.c  skill.h  soul.c  soul.h  telegram.c  telegram.h  tools.c  tools.h
src/certs/openrouter/: ca_certificate.h
src/skills/: CMakeLists.txt  skill.c  skill.h
src/skills/gpio/: CMakeLists.txt  SKILL.c  SKILL.md
src/skills/system/: CMakeLists.txt  SKILL.c  SKILL.md
src/tools/: CMakeLists.txt
src/tools/read_skill/: TOOL.c
src/tools/tool_exec/: CMakeLists.txt  TOOL.c
sysbuild/: nrf7002dk_nrf5340_cpuapp.conf
